crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__opener__tests__dynamic_filter_casting_a_timestamp_kept_above.snap
---
source: crates/vortex/src/persistent/opener.rs
expression: "pretty_format_batches_with_options(&batches, &format_options)?.to_string()"
---
+----------------------+
| ts                   |
+----------------------+
| 1970-01-01T00:00:01Z |
| NULL                 |
| 1970-01-01T00:00:03Z |
+----------------------+
