crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__opener__tests__open_files_different_table_schema_int16_file_widened.snap
---
source: crates/vortex/src/persistent/opener.rs
expression: "pretty_format_batches_with_options(&data, &format_opts)?.to_string()"
---
+-------+
| a     |
| Int32 |
+-------+
| -1    |
| -2    |
| -3    |
+-------+
