crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__opener__tests__projection_bug_minimal_repro_projected_and_cast.snap
---
source: crates/vortex/src/persistent/opener.rs
expression: "pretty_format_batches_with_options(&data, &format_opts)?.to_string()"
---
+-------+--------------------------+
| c     | b                        |
| Int32 | Dictionary(UInt32, Utf8) |
+-------+--------------------------+
| 2     | test                     |
+-------+--------------------------+
