crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__opener__tests__projection_expr_pushdown_result.snap
---
source: crates/vortex/src/persistent/opener.rs
expression: "pretty_format_batches_with_options(&data,\n&FormatOptions::new().with_types_info(true))? .to_string()"
---
+--------+
| result |
| Int32  |
+--------+
| 21     |
| 42     |
| 63     |
+--------+
